--- a/index.html
+++ b/index.html
@@ -1,16 +1,139 @@
 <!DOCTYPE html>
 <html>
 
+<title>Xentron Defense Technologies</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+  
+<style>
+  form input{
+    max-width: 150px;
+  }
+  .nav-link{
+    color: #333 !important;
+    background-color: #e0e0e0;
+    padding: 6px 12px;
+    border-radius: 6px;
+    text-decoration: none !important;
+    transition: background-color 0.2s ease;
+  }
+  .nav-link:hover{
+    background-color: #bdbdbd;
+    color: black !important;
+  }
+  @font-face{
+    font-family: 'Norwester';
+    src: url('norwester.otf') format('opentype');
+  }
+  .top-bar{
+    background-color: lightgray;
+    padding: 10px;
+  }
+  .tagline{
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+    font-family: 'Norwester', sans-serif;
+    font-size: 1.2rem;
+  }
+  .product-box{
+    border: 2px dashed gray;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+  }
+  .chat-bar{
+    background-color: lightgray;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .chat-bar input{
+    margin-left: 10px;
+    margin-right: 5px;
+  }
+  footer{
+    margin-bottom: 50px;
+  }
+ </style>
+</head>
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
 
+  <div class="top-bar">
+    <div class="container d-flex justify-content-between align-items-center">
+      <img src="Cody_Bajrami-_Logo_Design-Photoroom-removebg-preview.png" alt="Company Logo" style="height:40px;">
+      <div class="d-flex justify-content-center flex-grow-1">
+        <a href="#" class="nav-link mx-1">New</a>
+        <a href="#" class="nav-link mx-1">Preorder</a>
+        <a href="#" class="nav-link mx-1">Availability</a>
+        <a href="#" class="nav-link mx-1">Store Locator</a>
+        <a href="#" class="nav-link mx-1">Support</a>
+      </div>
+
+      <form class="d-flex ms-3">
+        <input class="form-control form-control-sm" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-dark btn-sm ms-2" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="tagline">
+    INTELLIGENCE. PROTECTION. PRECISION.
+  </div>
+
+  <div class="container text-center">
+    <img src="Xentron_AI_Product-removebg-preview.png" alt="Xentron AI Defense Product" class="img-fluid mt-4">
+    <p class="mt-3">FINANCING STARTING AT $X PER MONTH</p>
+    <a href="#learn-more" class="btn btn-dark mt-3">Learn More</a>
+  </div>
+
+  <div class="container mt-5" id="learn-more">
+    <h2 class="text-center">About Xentron</h2>
+    <p class="text-center mt-3">
+      Xentron Defense Technologies is a leading innovator in the field of advanced security systems. Our cutting-edge technology combines intelligence, protection, and precision to provide unparalleled defense solutions for both commercial and residential sectors.
+    </p>
+  </div>
+
+  <div class="container mt-5">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <i class="bi bi-cpu" style="font-size: 2rem;"></i>
+        <h5 class="mt-2">AI Intelligence</h5>
+        <p>Advanced machine learning algorithms for rapid threat detection.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="bi bi-shield-lock" style="font-size: 2rem;"></i>
+        <h5 class="mt-2">Secure Defense</h5>
+        <p>State-of-the-art protection systems ensuring safety.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="bi bi-bullseye" style="font-size: 2rem;"></i>
+        <h5 class="mt-2">Precision Targeting</h5>
+        <p>Pinpoint accuracy in every operation, no matter the conditions.</p>
+      </div>
+    </div>
+  </div>
+
+  <footer class="bg-dark text-light text-center p-3 mt-5">
+    &copy; 2025 Xentron Defense Technologies. All rights reserved.
+  </footer>
+
+  <div class="chat-bar">
+    Ask a chatbot:
+    <input type="text" placeholder="Type your question..." class="form-control form-control-sm" style="width: 300px;">
+    <button class="btn btn-primary btn-sm">Send</button>
+  </div>
+</body>
 </html>
