--- a/colors.html
+++ b/colors.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<div class="main-content">
+
   <div class="top-bar">
     <div class="container d-flex justify-content-between align-items-center">
       <a href="index.html"><img src="Cody_Bajrami-_Logo_Design-Photoroom-removebg-preview.png" alt="Logo" style="height:40px;"></a>
@@ -50,7 +52,7 @@
       <a href="index.html" class="btn btn-dark">Back to Home</a>
     </div>
   </div>
-
+</div>
   <footer class="bg-dark text-light text-center p-3 mt-5">
     &copy; 2025 Xentron Defense Technologies. All rights reserved.
   </footer>
