--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 <body>
 
+<div class="main-content">
+
   <!-- top bar -->
   <div class="top-bar">
     <div class="container d-flex justify-content-between align-items-center">
       <img src="Cody_Bajrami-_Logo_Design-Photoroom-removebg-preview.png" alt="Company Logo" style="height:40px;">
       <div class="d-flex justify-content-center flex-grow-1">
         <a href="index.html" class="nav-link mx-1">New</a>
-        <a href="#" class="nav-link mx-1">Preorder</a>
-        <a href="#" class="nav-link mx-1">Availability</a>
-        <a href="#" class="nav-link mx-1">Store Locator</a>
+        <a href="contact.html" class="nav-link mx-1">Contact</a>
         <a href="about.html" class="nav-link mx-1">Support</a>
       </div>
 
@@ -52,6 +52,8 @@
 
     <!-- buttons -->
     <a href="about.html" class="btn btn-dark mt-3">Learn More</a>
+
+</div>
 
   <!-- footer -->
   <footer class="bg-dark text-light text-center p-3 mt-5">
