--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+<div class="main-content">
   <!-- header -->
   <div class="top-bar">
     <div class="container d-flex justify-content-between align-items-center">
@@ -104,6 +105,7 @@
         <a href="index.html" class="btn btn-dark">Back to Home</a>
       </div>
     </div>
+</div>
 
   <footer class="bg-dark text-light text-center p-3 mt-5">
     &copy; 2025 Xentron Defense Technologies. All rights reserved.
