--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 </div>
 
   <!-- footer -->
-  <footer class="bg-dark text-light text-center p-3 mt-5">
+  <footer class="footer bg-dark text-light text-center p-3">
     &copy; 2025 Xentron Defense Technologies. All rights reserved.
   </footer>
+
+  </div>
 
   <!-- chat bar -->
   <div class="chat-bar">
