--- a/colors.html
+++ b/colors.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Color Palette • Xentron</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="style.css?v=3" rel="stylesheet">
 </head>
 <body>
 
