--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
   <!-- styles -->
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=3" rel="stylesheet">
 </head>
 <body>
 
